--- a/memelist-generator/src/index.css
+++ b/memelist-generator/src/index.css
@@ -61,11 +61,14 @@ main {
 
 .meme {
   position: relative;
+  display: flex;
+  flex-direction: column;
 }
 
 .meme--image {
   max-width: 100%;
   border-radius: 3px;
+  justify-self: center;
 }
 
 .meme--text {
