--- a/memelist-generator/src/index.css
+++ b/memelist-generator/src/index.css
@@ -57,6 +57,18 @@ main {
   color: white;
   border: none;
   cursor: pointer;
+  
+}
+
+.save-button {
+  grid-column: 1 / -1;
+  font-family: "Karla", sans-serif;
+  border-radius: 5px;
+  background: linear-gradient(90.41deg, #875f94 1.14%, #A818DA 100%);
+  color: white;
+  border: none;
+  cursor: pointer;
+  height: 40px;
 }
 
 .meme {
