--- a/memelist-generator/src/index.css
+++ b/memelist-generator/src/index.css
@@ -154,5 +154,10 @@ main {
 .edit-button {
   display: block;
   width: 50px;
+  position: relative;
+  top: 50px;
+}
 
+.delete-btn {
+  position: relative;
 }
