--- a/memelist-generator/src/index.css
+++ b/memelist-generator/src/index.css
@@ -152,7 +152,15 @@ main {
 }
 
 .edit-button {
-  display: block;
+  display: inline;
   width: 50px;
+
+}
+
+
+.delete-btn {
+  display: inline;
+  width: 50px;
+  height: 20px;
 
 }
