trying again to push the css changes with the button after working with Ash on the scroll feature

--- a/memelist-generator/src/index.css
+++ b/memelist-generator/src/index.css
@@ -151,9 +151,9 @@ main {
   top: 0;
 }
 
-/* #buttons{
+#buttons{
   display: inline-block;
-} */
+}
 .edit-button {
   display: inline-block;
   width: 50px;
